Created a fully functioning shopping cart

--- a/style.css
+++ b/style.css
@@ -377,6 +377,155 @@ p {
   } */
 }
 
+/* Shopping Cart and Favourites */
+.shopping-cart,
+.favourites {
+  width: 100%;
+  display: none;
+  flex-direction: column;
+  margin: auto;
+}
+
+.cart-top,
+.favourites-top {
+  font-family: var(--font-family);
+  padding: 12rem 0;
+  width: 100%;
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 120rem;
+}
+
+.cart-description,
+.favourites-description {
+  display: flex;
+  margin-top: 1rem;
+  margin-bottom: -10rem;
+  gap: 1rem;
+}
+
+.cart-count,
+.favourites-count {
+  color: hsla(0, 0%, 0%, 0.6);
+}
+
+.cart-menu,
+.favourites-menu {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  max-width: 120rem;
+}
+
+.cart-container,
+.favourites-container {
+  padding: 2.5rem 0;
+  display: inline-flex;
+  margin: auto;
+  gap: var(--gap);
+}
+
+.price.cart-item-price {
+  padding-top: 1rem;
+}
+
+.cart-quantity-container,
+.favourites-quantity-container {
+  display: inline-flex;
+  padding-top: 2rem;
+  gap: 1.5rem;
+}
+
+.minus-icon,
+.plus-icon,
+.cart-heart-icon,
+.cart-trash-icon,
+.favourites-cart-icon,
+.favourites-trash-icon {
+  font-size: var(--font-size-sm);
+}
+
+.favourites-trash-icon {
+  padding-top: 0.5rem;
+}
+
+.cart-icon-container {
+  padding-top: 3.5rem;
+  display: inline-flex;
+  gap: 1rem;
+}
+
+.favourites-icon-container {
+  padding-top: 10.5rem;
+  display: inline-flex;
+  gap: 1rem;
+}
+
+.cart-checkout-container {
+  margin: 5rem 0;
+}
+
+.cart-btn {
+  padding: 1rem 2rem;
+  bottom: 0;
+  font-family: var(--font-family);
+  font-size: var(--font-size-sm);
+  font-weight: 500;
+  color: var(--background-color);
+  background-color: var(--dark-color);
+  border: 2px solid var(--background-color);
+  border-radius: 5rem;
+  display: flex;
+  margin: auto;
+  transition: all 0.25s ease;
+}
+
+.cart-btn:hover {
+  background-color: var(--transparent-dark-color);
+}
+
+.cart-btn > h3 {
+  margin-top: 0.5rem;
+}
+
+@media screen and (min-width: 450px) {
+  .minus-icon,
+  .plus-icon,
+  .cart-heart-icon,
+  .cart-trash-icon,
+  .favourites-cart-icon,
+  .favourites-trash-icon {
+    font-size: 1.8rem;
+  }
+  .cart-icon-container {
+    padding-top: 3.5rem;
+  }
+  .favourites-icon-container {
+    padding-top: 10.5rem;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .minus-icon,
+  .plus-icon,
+  .cart-heart-icon,
+  .cart-trash-icon,
+  .favourites-cart-icon,
+  .favourites-trash-icon {
+    font-size: 2rem;
+  }
+  .cart-icon-container {
+    padding-top: 2rem;
+  }
+  .favourites-icon-container {
+    padding-top: 9.5rem;
+  }
+}
+
 /* Scroll to the top btn */
 .scrollToTop-btn i {
   color: var(--dark-color);
