Added a fully functioning Item Search and added a fake data. Also, styled the two components and made everything fully responsive.

--- a/src/index.css
+++ b/src/index.css
@@ -14,5 +14,10 @@
 }
 
 body {
-  background-color: #fffff5;
+  /* background-color: #fffff5; */
+  background-color: #fcf2e6;
+}
+
+.image:hover .overlay {
+  display: flex;
 }
