Made the code more organised and easy to understand.

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
 .dark {
   --color-bg-primary: #161616;
-  --color-bg-secondary: #181818;
+  --color-bg-secondary: #1a1a1a;
   --color-bg-button: #fff;
   --color-text-primary: #fff;
   --color-text-button: #161616;
