Added a custom scrollbar.

--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,26 @@ body {
   background-color: var(--color-bg-primary);
   transition-duration: 300ms;
 }
+
+/* Custom Scrollbar */
+
+/* Width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: darkgrey;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: grey;
+}
